Phase2/src/main/grammar/LogicPL.g4
grammar LogicPL;

@header{
import ast.node.*;
import ast.node.expression.*;
import ast.node.statement.*;
import ast.node.declaration.*;
import ast.node.expression.values.*;
import ast.node.expression.operators.*;
import ast.type.primitiveType.*;
import ast.type.*;
}

// comment

program returns[Program p]:
    {$p = new Program(); $p.setLine(0);}
    (function = functionDec {$p.addFunc($function.functionDeclaration);})*
    main = mainBlock {$p.setMain($main.main) ;}
    ;

functionDec returns[FuncDeclaration functionDeclaration]:
    {ArrayList<ArgDeclaration> args = new ArrayList<>();
    ArrayList<Statement> statements = new ArrayList<>();}

    FUNCTION name = identifier
    LPAR (argument1 = functionVarDec {args.add($argument1.argDeclaration);} (COMMA argument = functionVarDec {args.add($argument.argDeclaration);})*)? RPAR COLON returnType = type
    LBRACE ((stmt = statement {statements.add($stmt.statement_);})+) RBRACE
    {$functionDeclaration = new FuncDeclaration($name.identifier_, $returnType.type_, args, statements);
    $functionDeclaration.setLine($name.identifier_.getLine());}
    ;

functionVarDec returns [ArgDeclaration argDeclaration]:
    t = type arg_iden = identifier
    {$argDeclaration = new ArgDeclaration($arg_iden.identifier_, $t.type_);
    $argDeclaration.setLine($arg_iden.identifier_.getLine());}
    ;

mainBlock returns [MainDeclaration main]:
    {ArrayList<Statement> mainStmts = new ArrayList<>();}
    main_ = MAIN LBRACE (stmt = statement {mainStmts.add($stmt.statement_);})+ RBRACE
    {$main = new MainDeclaration(mainStmts); $main.setLine($main_.getLine());}
    ;

statement returns [Statement statement_]:
    statement1 = assignSmt {$statement_ = $statement1.assignStmt_;}
    | (statement2 = predicate SEMICOLON {$statement_ = $statement2.predicate_stmt;})
    | statement3 = implication {$statement_ = $statement3.implication_stmt;}
    | statement4 = returnSmt {$statement_ = $statement4.return_stmt;}
    | statement5 = printSmt {$statement_ = $statement5.PrintStmt_;}
    | statement6 = forLoop {$statement_ = $statement6.for_stmt;}
    | statement7 = localVarDeclaration {$statement_ = $statement7.localvarDec_;}
    ;

assignSmt returns [AssignStmt assignStmt_]:
    left_value = variable line = ASSIGN right_value = expression SEMICOLON
    {$assignStmt_ = new AssignStmt($left_value.v,  $right_value.exp_);
    $assignStmt_.setLine($line.getLine());}
    ;

variable returns [Variable v]:
    i = identifier {$v = $i.identifier_;}
    | name = identifier LBRACKET exp = expression RBRACKET
    {$v = new ArrayAccess($name.identifier_.getName(), $exp.exp_);
    $v.setLine($name.identifier_.getLine()); }
    ;

localVarDeclaration returns [Statement localvarDec_]:
    statement1 = varDeclaration {$localvarDec_ = $statement1.varDec_;}
    | statement2 = arrayDeclaration {$localvarDec_ = $statement2.arrayDec_;}
    ;

varDeclaration returns [VarDecStmt varDec_]:
    t = type var_id = identifier
    {$varDec_ = new VarDecStmt($var_id.identifier_, $t.type_);
    $varDec_.setLine($var_id.identifier_.getLine());}
    (ASSIGN exp_ = expression {$varDec_.setInitialExpression($exp_.exp_);} )? SEMICOLON
    ;

arrayDeclaration returns [ArrayDecStmt arrayDec_]:
    t = type LBRACKET INT_NUMBER RBRACKET var_id = identifier
    {$arrayDec_ = new ArrayDecStmt($var_id.identifier_, $t.type_, $INT_NUMBER.int);
    $arrayDec_.setLine($var_id.identifier_.getLine());}
    (array_init = arrayInitialValue {$arrayDec_.setInitialValues($array_init.initialValues);})? SEMICOLON
    ;

arrayInitialValue returns [ArrayList<Expression> initialValues]:
    ASSIGN arr_ls = arrayList {$initialValues = $arr_ls.values;}
    ;

arrayList returns [ArrayList<Expression> values]:
    {$values = new ArrayList<Expression>();}
    LBRACKET (v = value {$values.add($v.value_);}
    | identifier1 = identifier {$values.add($identifier1.identifier_);}) (COMMA (v2 = value {$values.add($v2.value_);}
    | identifier2 = identifier {$values.add($identifier2.identifier_);}))* RBRACKET
    ;

printSmt returns [PrintStmt PrintStmt_]:
    print = PRINT LPAR argument = printExpr RPAR SEMICOLON
    {$PrintStmt_ = new PrintStmt($argument.printExpr_);
    $PrintStmt_.setLine($print.getLine());}
    ;

printExpr returns [Expression printExpr_]:
    var = variable {$printExpr_ = $var.v;}
    | q = query {$printExpr_ = $q.query_;}
    ;

query returns [QueryExpression query_]:
    query1 = queryType1 {$query_ = $query1.query1_;}
    | query2 = queryType2 {$query_ = $query2.query2_;}
    ;

queryType1 returns [QueryExpression query1_]:
    LBRACKET line = QUARYMARK iden = predicateIdentifier LPAR var = variable RPAR RBRACKET
    {$query1_ = new QueryExpression($iden.predicateIdentifier_);
    $query1_.setLine($line.getLine()); $query1_.setVar($var.v);}
    ;

queryType2 returns [QueryExpression query2_]:
    LBRACKET iden = predicateIdentifier LPAR line = QUARYMARK RPAR RBRACKET
    {$query2_ = new QueryExpression($iden.predicateIdentifier_);
    $query2_.setLine($line.getLine()); }
    ;

returnSmt returns [ReturnStmt return_stmt]:
    RETURN (v = value {$return_stmt = new ReturnStmt($v.value_);}
    | id = identifier {$return_stmt = new ReturnStmt($id.identifier_);})? SEMICOLON
    {if($return_stmt == null){$return_stmt = new ReturnStmt(null);}}
    {$return_stmt.setLine($RETURN.getLine());}
    ;

forLoop returns [ForloopStmt for_stmt]:
    {ArrayList<Statement> bodyStmts = new ArrayList<>();}
    line = FOR LPAR it = identifier COLON arr_name = identifier RPAR
    LBRACE ((stmt =statement {bodyStmts.add($stmt.statement_);})*) RBRACE
    {$for_stmt = new ForloopStmt($it.identifier_, $arr_name.identifier_, bodyStmts);
    $for_stmt.setLine($line.getLine());}
    ;

predicate returns [PredicateStmt predicate_stmt]:
    id = predicateIdentifier LPAR v = variable RPAR
    {$predicate_stmt = new PredicateStmt($id.predicateIdentifier_, $v.v);
    $predicate_stmt.setLine($id.predicateIdentifier_.getLine());}
    ;


implication returns [ImplicationStmt implication_stmt]:
    {ArrayList<Statement> results_arr = new ArrayList<Statement>();}
    LPAR exp_ = expression RPAR a = ARROW LPAR ((s = statement {results_arr.add($s.statement_);})+) RPAR
    {$implication_stmt = new ImplicationStmt($exp_.exp_, results_arr); $implication_stmt.setLine($a.getLine());}
    ;

expression returns [Expression exp_]:
    left = andExpr right = expression2
    {if($right.exp_ != null) {$exp_ = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $exp_.setLine($right.exp_.getLine());} else {$exp_ = $left.exp_;}}
    ;

expression2 returns [BinaryExpression exp_] locals [BinaryExpression ee]:
    OR left = andExpr right = expression2
    {if($right.exp_ != null) {$ee = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $ee.setLine($right.exp_.getLine()); $exp_ = new BinaryExpression(null, $ee, BinaryOperator.or);}
    else{$exp_ = new BinaryExpression(null, $left.exp_, BinaryOperator.or);}}
    {$exp_.setLine($OR.getLine());}
    |
    {$exp_ = null;}
    ;

andExpr returns [Expression exp_]:
    left = eqExpr right = andExpr2
    {if($right.exp_ != null) {$exp_ = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                                $right.exp_.getBinaryOperator());
    $exp_.setLine($right.exp_.getLine());} else {$exp_ = $left.exp_;}}
    ;

andExpr2 returns [BinaryExpression exp_] locals [BinaryExpression ee]:
    AND left = eqExpr right = andExpr2
    {if($right.exp_ != null) {$ee = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $ee.setLine($right.exp_.getLine());
    $exp_ = new BinaryExpression(null, $ee, BinaryOperator.and);}
                                else{$exp_ = new BinaryExpression(null, $left.exp_, BinaryOperator.and);}}
    {$exp_.setLine($AND.getLine());}
    |
    {$exp_ = null;}
    ;

eqExpr returns [Expression exp_]:
    left = compExpr right = eqExpr2
    {if($right.exp_ != null) {$exp_ = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $exp_.setLine($right.exp_.getLine());} else {$exp_ = $left.exp_;}}
    ;

eqExpr2 returns [BinaryExpression exp_] locals [BinaryOperator opt, BinaryExpression ee]:
    (op = EQ {$opt = BinaryOperator.eq;} | op = NEQ {$opt = BinaryOperator.neq;}) left = compExpr right = eqExpr2
    {if($right.exp_ != null) {$ee = new BinaryExpression($left.exp_, $right.exp_.getRight(), $right.exp_.getBinaryOperator());
    $ee.setLine($right.exp_.getLine()); $exp_ = new BinaryExpression(null, $ee, $opt);}
                                        else{$exp_ = new BinaryExpression(null, $left.exp_, $opt);}}
    {$exp_.setLine($op.getLine());}
    |
    {$exp_ = null;}
    ;

compExpr returns [Expression exp_]:
    left = additive right = compExpr2
    {if($right.exp_ != null) {$exp_ = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $exp_.setLine($right.exp_.getLine());} else {$exp_ = $left.exp_;}}
    ;

compExpr2 returns [BinaryExpression exp_] locals [BinaryOperator opt, BinaryExpression ee]:
    (op = LT {$opt = BinaryOperator.lt;}
    | op = LTE {$opt = BinaryOperator.lte;}
    | op = GT {$opt = BinaryOperator.gt;}
    | op = GTE{$opt = BinaryOperator.gte;}) left = additive right = compExpr2
    {if($right.exp_ != null) {$ee = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $ee.setLine($right.exp_.getLine()); $exp_ = new BinaryExpression(null, $ee, $opt);}
                                        else{$exp_ = new BinaryExpression(null, $left.exp_, $opt);}}
    {$exp_.setLine($op.getLine());}
    |
    {$exp_ = null;}
    ;

additive returns [Expression exp_]:
    left = multicative right = additive2
    {if($right.exp_ != null) {$exp_ = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $exp_.setLine($right.exp_.getLine());} else {$exp_ = $left.exp_;}}
    ;

additive2 returns [BinaryExpression exp_] locals [BinaryOperator opt, BinaryExpression ee]:
    (op = PLUS {$opt = BinaryOperator.add;}
    | op = MINUS {$opt = BinaryOperator.sub;}) left = multicative right = additive2
    {if($right.exp_ != null) {$ee = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $ee.setLine($right.exp_.getLine()); $exp_ = new BinaryExpression(null, $ee, $opt);}
                                                else{$exp_ = new BinaryExpression(null, $left.exp_, $opt);}}
    {$exp_.setLine($op.getLine());}
    |
    {$exp_ = null;}
    ;

multicative returns [Expression exp_]:
    left =  unary right = multicative2
    {if($right.exp_ != null) {$exp_ = new BinaryExpression($left.exp_, $right.exp_.getRight(),
                                                            $right.exp_.getBinaryOperator());
    $exp_.setLine($right.exp_.getLine());} else {$exp_ = $left.exp_;}}
    ;

multicative2 returns [BinaryExpression exp_] locals [BinaryOperator opt, BinaryExpression ee]:
    (op = MULT {$opt = BinaryOperator.mult;}
    | op = MOD {$opt = BinaryOperator.mod;}
    | op = DIV {$opt = BinaryOperator.div;}) left = unary right = multicative2
    {if($right.exp_ != null) {$ee = new BinaryExpression($left.exp_, $right.exp_.getRight(), $right.exp_.getBinaryOperator());
    $ee.setLine($right.exp_.getLine()); $exp_ = new BinaryExpression(null, $ee, $opt);} 
                                                else{$exp_ = new BinaryExpression(null, $left.exp_, $opt);}}
    {$exp_.setLine($op.getLine());}
    |
    {$exp_ = null;}
    ;

unary returns [Expression exp_] locals [UnaryOperator opt]:
    otherRet = other {$exp_ = $otherRet.exp_;}
    | (op = PLUS {$opt = UnaryOperator.plus;}
    | op = MINUS {$opt = UnaryOperator.minus;}
    | op = NOT {$opt = UnaryOperator.not;}) expr = other
    {$exp_ = new UnaryExpression($opt, $expr.exp_); $exp_.setLine($op.getLine());}
    ;


other returns [Expression exp_]:
    LPAR expr = expression RPAR {$exp_ = $expr.exp_;}
    | var = variable {$exp_ = $var.v;}
    | val = value {$exp_ = $val.value_;}
    | q1 = queryType1 {$exp_ = $q1.query1_;}
    | funcCall = functionCall {$exp_ = $funcCall.functionCall_;}
    ;

functionCall returns [FunctionCall functionCall_]:
    {ArrayList<Expression> args = new ArrayList<Expression>();}
    function_name = identifier LPAR (essential_arg = expression {args.add($essential_arg.exp_);} (COMMA additional_arg = expression {args.add($additional_arg.exp_);})*)? RPAR
    {$functionCall_ = new FunctionCall(args, $function_name.identifier_); $functionCall_.setLine($function_name.identifier_.getLine());}
    ;

value returns [Value value_]:
    pv = numericValue {$value_ = $pv.val_;}
    | t = TRUE {$value_ = new BooleanValue(true);} {$value_.setLine($t.getLine());}
    | f = FALSE {$value_ = new BooleanValue(false);} {$value_.setLine($f.getLine());}
    | MINUS mv = numericValue {$mv.val_.negateConstant(); $value_ = $mv.val_;}
    ;

numericValue returns [Value val_]:
    integer_val = INT_NUMBER {$val_ = new IntValue($integer_val.int);}
    {$val_.setLine($integer_val.getLine());}
    | float_val = FLOAT_NUMBER {$val_ = new FloatValue(Float.parseFloat($float_val.text));}
    {$val_.setLine($float_val.getLine());}
    ;

identifier returns [Identifier identifier_]:
    iden = IDENTIFIER {$identifier_ = new Identifier($iden.text); $identifier_.setLine($iden.getLine());}
    ;

predicateIdentifier returns [Identifier predicateIdentifier_]:
    predicate_iden = PREDICATE_IDENTIFIER
	{$predicateIdentifier_ = new Identifier($predicate_iden.text);
	$predicateIdentifier_.setLine($predicate_iden.getLine());}
    ;

type returns [Type type_]:
    BOOLEAN {$type_ = new BooleanType();}
    | INT {$type_ = new IntType();}
    | FLOAT {$type_ = new FloatType();}
    ;




FUNCTION : 'function';
BOOLEAN : 'boolean';
INT : 'int';
FLOAT: 'float';
MAIN: 'main';
PRINT: 'print';
RETURN: 'return';
FOR: 'for';
TRUE: 'true';
FALSE: 'false';

LPAR: '(';
RPAR: ')';
COLON: ':';
COMMA: ',';
LBRACE: '{';
RBRACE: '}';
SEMICOLON: ';';
ASSIGN: '=';
LBRACKET: '[';
RBRACKET: ']';
QUARYMARK: '?';
ARROW: '=>';
OR: '||';
AND: '&&';
EQ: '==';
GT: '>';
LT: '<';
GTE: '>=';
LTE: '<=';
PLUS: '+';
MINUS: '-';
MULT: '*';
DIV: '/';
MOD: '%';
NEQ: '!=';
NOT: '!';


WS : [ \t\r\n]+ -> skip ;
COMMENT : '#' ~[\r\n]* -> skip ;

IDENTIFIER : [a-z][a-zA-Z0-9_]* ;
PREDICATE_IDENTIFIER : [A-Z][a-zA-Z0-9]* ;
INT_NUMBER : [0-9]+;
FLOAT_NUMBER: ([0-9]*[.])?[0-9]+;
